kubernetes/applications/media/radarr/ingressroute-external.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-external
  namespace: media
  labels:
    app: radarr
    access: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.shreck.io`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: external-chain
          namespace: traefik
  tls:
    secretName: shreck-io-tls
