kubernetes/applications/media/radarr/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-internal
  namespace: media
  labels:
    app: radarr
    access: internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.home.shreck.io`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: internal-chain
          namespace: traefik
